Remove margin from hero section row to avoid visible y-axis overflow on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -192,6 +192,10 @@ header .sidenav li>a>i {
     margin-bottom: 3rem;
 }
 
+#hero-card-wrapper {
+    margin: 0;
+}
+
 /* ----------------- Recipes Section */
 
 /* Recipes Header & Search */
